--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ScaleBridge — Automate, Build & Grow</title>
+    <title>Jute-Home Made Decor Demo</title>
     <meta
       name="description"
       content="ScaleBridge helps startups and agencies automate operations, build scalable websites, and generate leads with high-impact solutions."
