--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jute-Home Made Decor Demo</title>
-    <meta
+    <!-- <meta
       name="description"
       content="ScaleBridge helps startups and agencies automate operations, build scalable websites, and generate leads with high-impact solutions."
-    />
-    <meta
+    /> -->
+    <!-- <meta
       name="keywords"
       content="automation, web development, lead generation, SaaS, React, ScaleBridge"
-    />
+    /> -->
     <meta name="author" content="Anson Stephan" />
     <meta name="robots" content="index, follow" />
 
     <!-- ✅ Open Graph for Social Sharing -->
-    <meta property="og:title" content="ScaleBridge — Automate, Build & Grow" />
+    <meta property="og:title" content="Jute-Home Made Decor Demo" />
     <meta
       property="og:description"
       content="Automation, web development, and lead-gen services crafted to scale."
     />
-    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:image" content="/favicon.jpeg" />
     <meta property="og:url" content="https://scalebridge.netlify.app" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ScaleBridge — Automate, Build & Grow" />
+    <meta name="twitter:title" content="Jute-Home Made Decor Demo" />
     <meta
       name="twitter:description"
       content="Automation, web development, and lead-gen services crafted to scale."
     />
     <meta
       name="twitter:image"
-      content="https://scalebridge.netlify.app/favicon.png"
+      content="https://scalebridge.netlify.app/favicon.jpeg"
     />
     <link rel="canonical" href="https://scalebridge.netlify.app" />
 
