--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       property="og:description"
       content="Automation, web development, and lead-gen services crafted to scale."
     />
-    <meta property="og:image" content="/favicon.jpeg" />
+    <meta property="og:image"
+    content="https://jute-home-decor-demo.netlify.app/favicon.jpeg />
     <meta property="og:url" content="https://scalebridge.netlify.app" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jute-Home Made Decor Demo" />
