--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     /> -->
     <meta name="author" content="Anson Stephan" />
     <meta name="robots" content="index, follow" />
-
-    <!-- ✅ Open Graph for Social Sharing -->
+    <!-- 
+    ✅ Open Graph for Social Sharing
     <meta property="og:title" content="Jute-Home Made Decor Demo" />
     <meta
       property="og:description"
@@ -25,10 +25,15 @@
     />
     <meta
       property="og:image"
-      content="https://jute-home-decor-demo.netlify.app/favicon.jpeg"
+      content="https://jute-home-decor-demo.netlify.app/og-image.jpg"
     />
-    <meta property="og:url" content="https://scalebridge.netlify.app" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://jutehomedecor.netlify.app/og-image.jpg"
+      --
+    />
+    />
+    
     <meta name="twitter:title" content="Jute-Home Made Decor Demo" />
     <meta
       name="twitter:description"
@@ -38,9 +43,37 @@
       name="twitter:image"
       content="https://scalebridge.netlify.app/favicon.jpeg"
     />
-    <link rel="canonical" href="https://scalebridge.netlify.app" />
+    <link rel="canonical" href="https://scalebridge.netlify.app" /> -->
 
     <!-- <title>ScaleBridge</title> -->
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Eco-Friendly Jute Home Decor" />
+    <meta
+      property="og:description"
+      content="Handmade sustainable pieces from Nigeria, designed for modern homes."
+    />
+    <meta
+      property="og:image"
+      content="https://jute-home-decor-demo.netlify.app/favicon.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://jute-home-decor-demo.netlify.app"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card (optional but recommended) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eco-Friendly Jute Home Decor" />
+    <meta
+      name="twitter:description"
+      content="Handmade sustainable pieces from Nigeria, designed for modern homes."
+    />
+    <meta
+      name="twitter:image"
+      content="https://jute-home-decor-demo.netlify.app/favicon.jpeg"
+    />
   </head>
   <body>
     <div id="root"></div>
